# simanneal2

./: .gitignore  LICENSE.txt  pyproject.toml
simanneal/: __init__.py  anneal.py
simanneal2/: __init__.py  anneal.py
tests/: helper.py  test_anneal.py
