[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "simanneal2"
version = "0.0.1"
authors = [
    { name = "Olivier Laurent", email = "olivier.laurent@ensta-paris.fr" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
keywords = [
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
]

[project.urls]
homepage = ""
documentation = ""
repository = ""

[tool.flit.module]
name = "simmeanneal2"

[tool.ruff]
line-length = 120
target-version = "py310"
lint.extend-select = [
    "A",
    "ARG", 
    "B",
    "C4",
    "D",
    "ERA",
    "F",
    "G",
    "I",
    "ISC",
    "ICN",
    "N",
    "PERF",
    "PIE",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RUF",
    "RSE",
    "S",
    "SIM",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
lint.ignore = [
    "ARG002",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "D205",
    "D206",
    "ISC001",
    "N818",
    "N812",
    "RUF012",
    "S101",
    "TRY003",
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
branch = true
include = ["*/weight_space_symmetries/*"]
omit = []

[tool.coverage.report]
exclude_lines = ["coverage: ignore", "raise NotImplementedError"]
ignore_errors = true
